# SimpleLLMInference

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/base/: base.h
include/kernel/: add_kernel.h  emb_kernel.h  matmul_kernel.h  mha_kernel.h  rms_kernel.h  rope_kernel.h
include/kernel/cpu/: add_kernel.h  emb_kernel.h  matmul_kernel.h  swiglu_kernel.h
include/kernel/cuda/: add_kernel.cuh  emb_kernel.cuh  matmul_kernel.cuh  mha_kernel.cuh  rms_kernel.cuh  rope_kernel.cuh  swiglu_kernel.cuh
include/memory/: alloc.h  buffer.h  tensor.h
include/model/: config.h  model.h  weight_loader.h
include/op/: add.h  argmax.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
pytorch/export/: model.py
source/kernel/: add_kernel.cpp  emb_kernel.cpp  matmul_kernel.cpp  mha_kernel.cpp  rms_kernel.cpp  rope_kernel.cpp  swiglu_kernel.cpp
source/kernel/cpu/: mha_kernel.cpp  rms_kernel.cpp  rope_kernel.cpp
source/kernel/cuda/: add_kernel.cu  emb_kernel.cu  matmul_kernel.cu  mha_kernel.cu  rms_kernel.cu  rope_kernel.cu  swiglu_kernel.cu
source/memory/: alloc.cpp  buffer.cpp  tensor.cpp
source/model/: model.cpp  weight_loader.cpp
source/op/: add.cpp  argmax.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
source/op/kernel_include/: add_kernel.cuh  add_kernel.h  emb_kernel.cuh  emb_kernel.h  matmul_kernel.cuh  mha_kernel.h  rms_kernel.cuh  rms_kernel.h  rope_kernel.cuh
source/op/kernel_source/: add_kernel.cpp  add_kernel.cu  emb_kernel.cpp  emb_kernel.cu  matmul_kernel.cpp  (+6 more)
